--- a/Accentos/Base.lproj/Main.storyboard
+++ b/Accentos/Base.lproj/Main.storyboard
@@ -94,73 +94,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="rxK-7Z-yKJ">
-                                <rect key="frame" x="0.0" y="288" width="375" height="191"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BNu-Hd-MPQ">
-                                        <rect key="frame" x="10" y="0.0" width="355" height="50"/>
-                                        <fontDescription key="fontDescription" name="Menlo-Bold" family="Menlo" pointSize="40"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Type your word" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eoJ-R9-a47">
-                                        <rect key="frame" x="20" y="80" width="335" height="31"/>
-                                        <color key="backgroundColor" red="0.99215686270000003" green="0.62745098040000002" blue="0.56862745100000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="26"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dpu-gJ-vQ7">
-                                        <rect key="frame" x="112.66666666666669" y="141" width="150" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="150" id="JQh-BY-BPv"/>
-                                            <constraint firstAttribute="height" constant="50" id="Nsr-sg-HUq"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="28"/>
-                                        <state key="normal" title="Find">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
-                                                <integer key="value" value="2"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                <integer key="value" value="20"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <action selector="wordSubmitted:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AOB-jL-frC"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="BNu-Hd-MPQ" secondAttribute="trailing" constant="10" id="9H7-uC-JwX"/>
-                                    <constraint firstItem="dpu-gJ-vQ7" firstAttribute="top" secondItem="eoJ-R9-a47" secondAttribute="bottom" constant="30" id="IX4-Ji-eoT"/>
-                                    <constraint firstItem="BNu-Hd-MPQ" firstAttribute="leading" secondItem="rxK-7Z-yKJ" secondAttribute="leading" constant="10" id="jqK-4O-oGh"/>
-                                    <constraint firstAttribute="trailing" secondItem="eoJ-R9-a47" secondAttribute="trailing" constant="20" id="kxf-1p-0AM"/>
-                                    <constraint firstItem="eoJ-R9-a47" firstAttribute="leading" secondItem="rxK-7Z-yKJ" secondAttribute="leading" constant="20" id="zwF-Cp-lZm"/>
-                                </constraints>
-                            </stackView>
+                            <searchBar contentMode="redraw" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ujC-CI-IE7">
+                                <rect key="frame" x="0.0" y="54" width="375" height="56"/>
+                                <color key="barTintColor" red="0.99158376459999997" green="0.62639492750000003" blue="0.56757730250000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="E9m-bs-QDs">
+                                <rect key="frame" x="0.0" y="110" width="375" height="619"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="separatorColor" red="0.99158376459999997" green="0.62639492750000003" blue="0.56757730250000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="sectionIndexBackgroundColor" red="0.99158376459999997" green="0.62639492750000003" blue="0.56757730250000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="0.99215686270000003" green="0.62745098040000002" blue="0.56862745100000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="rxK-7Z-yKJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LT0-Qz-3mj"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rxK-7Z-yKJ" secondAttribute="trailing" id="OwE-nJ-Kax"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="rxK-7Z-yKJ" secondAttribute="bottom" constant="250" id="YB6-Ah-Hy0"/>
+                            <constraint firstItem="ujC-CI-IE7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Hol-vF-cho"/>
+                            <constraint firstItem="ujC-CI-IE7" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="SRm-RJ-f9n"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="E9m-bs-QDs" secondAttribute="trailing" id="SiD-N8-pUw"/>
+                            <constraint firstItem="E9m-bs-QDs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="TSV-uG-mmp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="E9m-bs-QDs" secondAttribute="bottom" id="j5p-da-P1B"/>
+                            <constraint firstItem="ujC-CI-IE7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="mg1-qX-Vpo"/>
+                            <constraint firstItem="E9m-bs-QDs" firstAttribute="top" secondItem="ujC-CI-IE7" secondAttribute="bottom" id="tgu-up-Mg8"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="search" id="Rhk-tZ-L6g"/>
                     <connections>
-                        <outlet property="result" destination="BNu-Hd-MPQ" id="VkX-Rg-c2V"/>
-                        <outlet property="wordTyped" destination="eoJ-R9-a47" id="rZ5-Y8-H1M"/>
+                        <outlet property="searchBar" destination="ujC-CI-IE7" id="opi-R1-37t"/>
+                        <outlet property="tableView" destination="E9m-bs-QDs" id="6Oa-JN-0hA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="319" y="-198"/>
+            <point key="canvasLocation" x="317.60000000000002" y="-198.02955665024632"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="OMB-Vt-m4z">
@@ -235,7 +202,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="FlK-ZD-Use" kind="relationship" relationship="viewControllers" id="AAB-Uy-lkt"/>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="NQM-lD-9z2"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="iDw-k1-6yx"/>
                         <segue destination="Hyh-NR-cEv" kind="relationship" relationship="viewControllers" id="7v8-iS-TVb"/>
                         <segue destination="2MQ-FI-d08" kind="relationship" relationship="viewControllers" id="o6M-m2-ALT"/>
                         <segue destination="uBW-eT-Th5" kind="relationship" relationship="viewControllers" id="J2F-9U-aqd"/>
